fully functional boundary that will publish a dataset availability event
notes:
lambdas must be compiled against JDK 11
must use a StreamHandler so that proper date/time modules are used by Jackson
needs robust way to set cloud watch retention policies on lambda functions